# discord-scheduler-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 463c70a41d20_initial_schema.py  e92a348d15b2_add_rsvp_priority.py
src/: bot.py  config.py  database.py  embed_helper.py  models.py  utils.py
src/cogs/: campaign.py  reminders.py  session.py  timezone.py
src/ui/: views.py
